# coding-challenges

./: README.md
formal-verification/: .gitignore  README.md
formal-verification/queue/: README.md
formal-verification/queue/tla/: queue.tla
fstar-verification/: README.md
fstar-verification/lists-verification/: README.md
game-svcfabric/: README.md
game-svcfabric/Galactica/: Galactica.sln
game-svcfabric/Galactica/Galactica.StatefulSvc/: Galactica.StatefulSvc.sfproj
maersk2020.dotnet/: Challenge.md  LICENSE  README.md
maersk2020.dotnet/WebIntSorter/: WebIntSorter.sln
maersk2020.dotnet/WebIntSorter/WebIntSorter/: Program.cs  Startup.cs  WebIntSorter.csproj
maersk2020.dotnet/WebIntSorter/WebIntSorter.Controllers.UnitTests/: SortingControllerUnitTest.cs
maersk2020.dotnet/WebIntSorter/WebIntSorter.ReactClient/: README.md  package-lock.json  package.json
maersk2020.dotnet/WebIntSorter/WebIntSorter.UnitTests/: AlgorithmsUnitTest.cs  SortingJobCollectionTest.cs  SortingJobUnitTest.cs  WebIntSorter.UnitTests.csproj
promotion-engine/: Challenge.md  README.md
promotion-engine/PromoEng/: PromoEng.sln  PromoEngLibrary.sln
promotion-engine/PromoEng/PromoEng.CoreWebApi.Controllers.UnitTests/: CartControllerTests.cs  (+1 more)
sorting-web-api/: Challenge.md  README.md
sorting-web-api/WebIntSorter/: WebIntSorter.sln
white-rabbit-hole/: .gitignore  README.md
white-rabbit-hole/WhiteRabbitHole/: CMakeLists.txt
white-rabbit-hole/WhiteRabbitHole/WhiteRabbitHole/: CMakeLists.txt  Common.h  Hashing.cpp  Hashing.h  Histogram.cpp  Histogram.h  MD5.cpp  MD5.h  Program.cpp  Program.h  Solver.cpp  Solver.h  Utils.cpp  Utils.h
(+109 files in other folders)
